# x4-mod-manager

./: .gitignore  README.md  main.py  pyproject.toml  run-admin.bat
templates/: index.html
