[project]
name = "x4-mod-manager"
version = "1.0.0"
description = "Simple FastAPI web app to manage X4: Foundations mods via symlinks"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "matt-wai" }]
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "jinja2>=3.1.2",
    "python-multipart>=0.0.6",
]

[project.scripts]
x4mm = "main:run"

[dependency-groups]
dev = []

